--- a/contest(11-05-18)/css/main.css
+++ b/contest(11-05-18)/css/main.css
@@ -1,7 +1,10 @@
+@import url('https://fonts.googleapis.com/css?family=Open+Sans');
 body {
 	background-color: #F1F1F1;
 	width: 100%;
+	height: 100%;
 	margin-left: -0.5px;
+	font-family: 'Open Sans', sans-serif;
 }
 ul {
 	list-style-type: none;
@@ -11,19 +14,17 @@ ul {
 	margin-top: 100px;
 }
 #header {
-	background-color: #4B698B;
 	position: relative;
 	color: #FFF;
 	display: flex;
+	margin-top: -2%;
 }
 #header > ul {
 	display: inline-flex;
-	width: 300px;
+	width: 150px;
 	position: absolute;
-	margin-left: 50%;
-	justify-content: space-around;
-}
-#header > li {
+	margin-left: 70%;
+	justify-content: space-between;
 }
 #try {
 	background-color: #417C81;
@@ -36,16 +37,43 @@ ul {
 }
 #products {
 	width: 80%;
+	margin-top: 2%;
 	margin-left: 10%;
 	background-color: #f3f3f3;
 	padding-bottom: 50px;
-	border: solid 1px;
-	border-top: 0px;
 }
 #productsmenu {
 	display: flex;
 	width: 100%;
 	justify-content: space-around;
+}
+#advantages {
+	width: 80%;
+	margin-left: 10%;
+	display: flex;
+	align-items: flex-start;
+}
+#why {
+	display: flex;
+	flex-direction: row;
+	justify-content: space-between;
+	margin: 20px;
+}
+#footer {
+	width: 100%;
+	background-color: #3d3d3d;
+	color: #F1F1F1;
+	display: inline-flex;
+	justify-content: space-around;
+	align-items: center;
+	position: absolute;
+}
+.footer-text {
+	width: 20%;
+	color: #9e9e9e;
+}
+.footer-text > h2 , .footer-text > ul > h2 {
+	color: #e0e0e0;
 }
 .menupoint {
 	display: flex;
@@ -54,12 +82,9 @@ ul {
 	color: #000;
 }
 
-.active-element {
-	background-color: #d3d3d3;
-}
 .text {
-	width: 60%;
-	margin-left: 20%;
+	width: 80%;
+	margin-left: 10%;
 	color: #000;
 	font-size: 20px;
 }
